ingress-hugosite.yaml
#Ingress manifest
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hugo-site
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
  - hosts:
    - s291490-hugosite.crownlabs.polito.it
    secretName: hugo-site-cert
  rules:
    - host: s291490-hugosite.crownlabs.polito.it
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: hugo-site
                port:
                  number: 80
